--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ img {
     background-color: var(--primary-color);
     color: #fff;
     height: 70px;
+    overflow: auto;
 }
 
 .navbar ul {
@@ -190,6 +191,34 @@ img {
 
 .languages .card:hover {
     transform: translateY(-15px);
+}
+
+/* Features */
+
+.features-head img {
+    width: 200px;
+    justify-self: flex-end;
+}
+
+.features-sub-head img {
+    width: 300px;
+    justify-self: flex-end;
+}
+
+.features-main .card > i{
+    margin-right: 20px;
+}
+
+.features-main .grid {
+    padding: 30px;
+}
+
+.features-main .grid>*:first-child {
+    grid-column: 1 / span 3;
+}
+
+.features-main .grid>*:nth-child(2) {
+    grid-column: 1 / span 2;
 }
 
 /* Footer */
